# mockgen

./: .gitignore  Cargo.toml  README.md  husky.toml  package-lock.json  package.json
.github/workflows/: release.yml
.husky/: pre-commit
docs/: config.json
docs/overview/: installation.md  overview.md
src/: lib.rs  main.rs  mock_data.rs
src/engine/: addresses.rs  balance.rs  mod.rs  old_addresses.rs  phonenumber.rs
tests/: integration_test.rs
