[package]
name = "mock_data"
version = "0.1.0"
edition = "2021"
authors = ["Lukas Olsen"]
description = "Mock Gen is a data generation tool used in making test data or fake data based on options."
license = "MIT"

[dependencies]
actix-web = "4.6.0"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"

[dev-dependencies]
actix-rt = "2.5.0"  # Ensure you have actix-rt for async testing
